# OpenPDF

./: .gitignore  README.md  build.py  openpdf.py  pyproject.toml
src/openpdf/: core.py
